# platform

./: .clang-format  .clang-tidy  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  conanfile.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-baremetal-arm.yml  build-freertos-arm.yml  build-linux-arm.yml  build-linux.yml  docs.yml  main.yml  quality.yml
.gitlab/ci/: build-baremetal.yml  build-demo-baremetal.yml  build-demo-linux.yml  build-linux.yml  demo-baremetal.yml  demo-linux.yml  deploy.yml  docs.yml  quality.yml  run-demo-baremetal.yml  run-demo-linux.yml  sanitizers-linux.yml
.gitlab/issue_templates/: Bug.md  Feature.md  Generic.md  Refactoring.md
app/: CMakeLists.txt
app/baremetal-arm/: CMakeLists.txt  arm-none-eabi-gcc-10.cmake  arm-none-eabi-gcc-8.cmake  arm-none-eabi-gcc-9.cmake  arm-none-eabi-gcc.cmake  main.cpp  syscalls.cpp  toolchain.cmake
app/freertos-arm/: CMakeLists.txt  arm-none-eabi-gcc-8.cmake  arm-none-eabi-gcc-9.cmake  arm-none-eabi-gcc.cmake  main.cpp  syscalls.cpp  toolchain.cmake
app/freertos-arm/freertos-10.2.1/: CMakeLists.txt
app/freertos-arm/freertos-10.2.1/portable/: CMakeLists.txt
app/freertos-arm/freertos-10.2.1/portable/ARM_CA53_64_BIT/: CMakeLists.txt
app/freertos-arm/freertos-10.2.1/portable/ARM_CM23/: CMakeLists.txt
app/freertos-arm/freertos-10.2.1/portable/ARM_CM23/secure/: CMakeLists.txt
app/freertos-arm/freertos-10.2.1/portable/ARM_CM23_NTZ/non_secure/: CMakeLists.txt
app/freertos-arm/freertos-10.2.1/portable/ARM_CM33/non_secure/: CMakeLists.txt
app/freertos-arm/freertos-10.2.1/portable/ARM_CM33/secure/: CMakeLists.txt
app/freertos-arm/freertos-10.2.1/portable/ARM_CM33_NTZ/: CMakeLists.txt
app/freertos-arm/freertos-10.2.1/portable/ARM_CM3_MPU/: CMakeLists.txt
app/freertos-arm/freertos-10.2.1/portable/ARM_CM4_MPU/: CMakeLists.txt
app/freertos-arm/freertos-10.2.1/portable/ARM_CM7/r0p1/: CMakeLists.txt
app/linux/: CMakeLists.txt  arm-linux-gnueabihf-clang-10.cmake  arm-linux-gnueabihf-clang-11.cmake  arm-linux-gnueabihf-clang-12.cmake  arm-linux-gnueabihf-clang-13.cmake  arm-linux-gnueabihf-clang-7.cmake  arm-linux-gnueabihf-clang-8.cmake  arm-linux-gnueabihf-clang-9.cmake  arm-linux-gnueabihf-clang.cmake  arm-linux-gnueabihf-gcc-10.cmake  arm-linux-gnueabihf-gcc-8.cmake  arm-linux-gnueabihf-gcc-9.cmake  arm-linux-gnueabihf-gcc.cmake  arm-none-linux-gnueabihf-clang-14.cmake  arm-none-linux-gnueabihf-clang.cmake  arm-none-linux-gnueabihf-gcc.cmake  clang-10.cmake  clang-11.cmake  clang-12.cmake  clang-13.cmake  clang-14.cmake  clang-7.cmake  clang-8.cmake  clang-9.cmake  clang.cmake  gcc-10.cmake  gcc-11.cmake  gcc-7.cmake  gcc-8.cmake  gcc-9.cmake  main.cpp  toolchain.cmake
app/linux-arm/: CMakeLists.txt  arm-linux-gnueabihf-clang-7.cmake  arm-linux-gnueabihf-clang-8.cmake  arm-linux-gnueabihf-clang-9.cmake  arm-linux-gnueabihf-gcc-8.cmake  arm-linux-gnueabihf-gcc-9.cmake  arm-linux-gnueabihf-gcc.cmake  main.cpp  toolchain.cmake
cmake/: conan-wrapper.cmake  conan.cmake  doxygen.cmake  platform.cmake  presets-baremetal.json  presets-linux.json  presets-type.json  sanitizers.cmake
demo/: CMakeLists.txt  appMain.cpp  platform-demo.cmake  platformInit.hpp  settings.cmake
demo/baremetal-arm/: CMakeLists.txt  platformInit.cpp  stm32f4discovery.ld  syscalls.cpp
demo/freertos-arm/: CMakeLists.txt  platformInit.cpp  stm32f4discovery.ld  syscalls.cpp
demo/freertos-arm-demo/: CMakeLists.txt  FreeRTOSConfig.h  appMain.cpp  freertos-arm-demo.cmake
demo/init/: CMakeLists.txt  platformInit.hpp
demo/init/baremetal-arm/: CMakeLists.txt  init.cpp  platformInit.cpp  stm32f407vgtx.ld  stm32f4discovery.ld
demo/init/freertos-arm/: CMakeLists.txt  FreeRTOSConfig.h  init.cpp  platformInit.cpp  stm32f407vgtx.ld
demo/init/include/platform/: init.hpp
demo/init/linux/: CMakeLists.txt  init.cpp  platformInit.cpp
demo/init/linux-arm/: platformInit.cpp
demo/linux-arm/: CMakeLists.txt
demo/linux-demo/: CMakeLists.txt  appMain.cpp  linux-demo.cmake
lib/: CMakeLists.txt
lib/baremetal-arm/: CMakeLists.txt  main.cpp  syscalls.cpp
lib/freertos-arm/: CMakeLists.txt  main.cpp  syscalls.cpp
lib/freertos-arm/freertos-10.2.1/: CMakeLists.txt
lib/freertos-arm/freertos-10.2.1/portable/ARM_CA9/: CMakeLists.txt
lib/freertos-arm/freertos-10.2.1/portable/ARM_CM23_NTZ/: CMakeLists.txt
lib/freertos-arm/freertos-10.2.1/portable/ARM_CM33/: CMakeLists.txt
lib/freertos-arm/freertos-10.2.1/portable/ARM_CM7/: CMakeLists.txt
lib/freertos-arm/freertos-10.2.1/portable/ARM_CM7/r0p1/: CMakeLists.txt
lib/info/: CMakeLists.txt  generateVersion.cmake  getGitInfo.cmake  git.cpp  git.h.in  version.cpp  version.h.in
lib/info/include/platform/: git.hpp  version.hpp
lib/linux/: CMakeLists.txt  clang-10.cmake  gcc.cmake  main.cpp
linux/: CMakeLists.txt
linux-raspberrypi/: CMakeLists.txt  toolchain.cmake
test/: CMakeLists.txt  appMain.cpp  platform-tests.cmake
tools/: build_baremetal_arm_gcc_debug.sh  build_baremetal_arm_gcc_release.sh  build_freertos_arm_gcc_debug.sh  build_freertos_arm_gcc_release.sh  build_linux_arm_clang_debug.sh  build_linux_arm_clang_release.sh  build_linux_arm_gcc_debug.sh  build_linux_arm_gcc_release.sh  build_linux_clang_debug.sh  build_linux_clang_release.sh  build_linux_gcc_debug.sh  build_linux_gcc_release.sh  check-clang-format.sh  check-clang-tidy.sh  doxygen.sh  profile.in  run-clang-tidy.py
tools/ci/: logs-reader.py  program-openocd.py
